the job opportunity system web app

--- a/home.html
+++ b/home.html
@@ -23,9 +23,20 @@
         <a href="#">Jobs</a>
         <a href="#">Companies</a>
         <a href="login.html">Log In</a>
-        <button class="signup">Sign Up</button>
+        <button id="signup-btn1" class="signup">Sign Up</button>
       </nav>
-      <div class="hamburger">&#9776;</div>
+      <div class="hamburger" id="menu-toggle">&#9776;</div>
+
+      <nav id="mobile-nav">
+        <!-- Mobile nav below header -->
+        <div class="close-btn" id="close-menu">&times;</div>
+        <!-- X button -->
+        <a href="home.html">Home</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="companies.html">Companies</a>
+        <a href="login.html">Log In</a>
+        <button id="signup-btn" iclass="signup">Sign Up</button>
+      </nav>
     </header>
 
     <section class="hero">
@@ -33,7 +44,7 @@
         <h1>Find Your Dream Job</h1>
         <p>
           Search thousands of job opportunities and find the best fit for you in
-          our system.git
+          our system.
         </p>
 
         <div class="search-box">
@@ -59,5 +70,6 @@
         <a href="#"><div class="cat blue">Design</div></a>
       </div>
     </section>
+    <script src="main.js"></script>
   </body>
 </html>
