--- a/login.html
+++ b/login.html
@@ -23,8 +23,8 @@
         <input type="email" type="tel" />
         <label for="password">Password*</label>
         <input type="password" />
-
-        <button>Login</button>
+        <p id="error-msg" style="color: red; display: none"></p>
+        <button id="login-btn">Login</button>
       </section>
 
       <hr />
@@ -40,5 +40,6 @@
         <a href="#">Forgot Your password?</a>
       </section>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
