--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,9 @@
           <input type="text" placeholder="Tell us about your projects." />
         </div>
 
-        <button>Sign up</button>
+        <p id="error-msg" style="color: red; display: none"></p>
+
+        <button id="signup-btn">Sign up</button>
         <p>Already Have an Account? <a href="login.html">Login</a></p>
       </div>
       <div class="description">
@@ -58,5 +60,6 @@
         <p>&#10004; 24/7 accessable</p>
       </div>
     </section>
+    <script src="main.js"></script>
   </body>
 </html>
