the job opportunity system web app

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         <a href="jobs.html">Jobs</a>
         <a href="companies.html">Companies</a>
         <a href="login.html">Log In</a>
-        <button id="signup-btn" iclass="signup">Sign Up</button>
+        <button id="signup-btn2" iclass="signup">Sign Up</button>
       </nav>
     </header>
 
