--- a/signup.html
+++ b/signup.html
@@ -3,63 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign In</title>
     <link rel="stylesheet" href="auth.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <title>job opprotunity system | signup</title>
   </head>
   <body>
-    <section class="form">
-      <div class="signup-form">
-        <div></div>
-        <h2>Get a full time or a part time job with us</h2>
-        <p>
-          Fill the form to register into our system and start searching applying
-          for jobs.
-        </p>
-        <div class="input-flex">
-          <input type="email" placeholder="Business email*" />
-          <div class="short-inputs">
-            <input type="text" placeholder="First name*" />
-            <input type="text" placeholder="Last name*" />
-            <input type="text" placeholder="Company*" />
-            <input type="tel" placeholder="Phone" />
-            <input type="password" placeholder="Password*" />
-            <input type="password" placeholder="Corfirm password*" />
-          </div>
-          <input type="text" placeholder="Industry field" />
-          <input type="text" placeholder="Department*" />
-          <input type="text" placeholder="Job Level/role*" />
+    <main>
+      <section>
+        <form action="connect.php" method="post">
+          <label for="user">First Name</label>
           <input
             type="text"
-            placeholder="What best describes your Organization? if you are a one*"
+            name="First_Name"
+            placeholder="Your First Name"
+            id="user"
+            required
           />
-          <input type="text" placeholder="Country*" />
-          <input type="text" placeholder="Tell us about your projects." />
+          <label for="user">Last Name</label>
+          <input
+            type="text"
+            name="Last_Name"
+            placeholder="Your Last Name"
+            id="user"
+            required
+          />
+          <label for="email">Email</label>
+          <input
+            type="email"
+            name="email"
+            placeholder="email"
+            id="email"
+            required
+          />
+          <label for="password">Password</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Password"
+          />
+          <label for="confirm_password">Confirm Password</label>
+          <input
+            type="password"
+            name="confirm_password"
+            id="confirm_password"
+            placeholder="confirm password"
+            required
+          />
+          <input
+            type="submit"
+            name="submit"
+            class="submit-btn"
+            id="submit"
+            value="Sign Up"
+          />
+        </form>
+        <a href="#">Already have an account?</a>
+      </section>
+      <section>
+        <!--signup with third party app-->
+        <div class="third-party-signup">
+          <p>Or sign up with:</p>
+          <button class="signupwith google">Sign up with Google</button>
+          <button class="signupwith linkedin">Sign up with LinkedIn</button>
+          <button class="signupwith github">Sign up with GitHub</button>
         </div>
-
-        <p id="error-msg" style="color: red; display: none"></p>
-
-        <button id="signup-btn">Sign up</button>
-        <p>Already Have an Account? <a href="login.html">Login</a></p>
-      </div>
-      <div class="description">
-        <h3><i class="fa-solid fa-briefcase"></i>Job Portal</h3>
-        <p class="number1">The #1 platform to find jobs that suit your role</p>
-        <p>&#10004; Get connected to over 1 million employers</p>
-        <p>&#10004; Find a community of</p>
-        <p>
-          &#10004; Make use of our LLM to match you with jobs best fited for you
-        </p>
-        <p>&#10004; Find jobs fast and secured</p>
-        <p>&#10004; 24/7 accessable</p>
-      </div>
-    </section>
-    <script src="main.js"></script>
+      </section>
+    </main>
   </body>
 </html>
